# goxdcr

./: .copyrightignore  .gitignore  .gitmodules  .mockery.yaml  CMakeLists.txt  README.md  build.sh  flexibleFraming.go  generate.go  go.mod  go.sum  mc_constants.go  mc_req.go  mc_req_test.go  mc_res.go  mc_res_test.go  metrics_metadata.json  run_unit_tests.sh  setup_agents.sh
adminport/: admin.go  admin_httpd.go  adminport.go  msg_utils.go
backfill_manager/: backfillMgrSvc.go  backfill_manager.go  backfill_manager_test.go  backfill_request_handler.go  backfill_request_handler_test.go  dev_injector.go  metakv_change_listener.go  prod_injector.go
base/: audit_types.go  conflictLogRules.go  conflictLogRules_test.go  connection_pool.go  constant.go  constant_test.go  constants_dev.go  datapool.go  errors.go  gen_server.go  gen_server_test.go  grpcConn.go  mcreqeust_pool.go  metadata_change_monitor.go  metakv_change_listener.go  mutate_with_meta.go  mutate_with_meta_test.go  pcre_wrapper.go  pcre_wrapper_disabled.go  pcre_wrapper_interface.go  replication_settings.go  semaphore.go  semaphore_test.go  simple_utils.go  simple_utils_pcre_test.go  simple_utils_test.go  target_topology.go  target_topology_test.go  tcp_connection_pool.go  types.go  types_test.go  uuid.go  vb.go  xdcr_config.go  xmem_client.go
capi_utils/: capi_utils.go  capi_utils_test.go
cbauth/: xdcr_transport.go
ccrMetadata/: ccrMetadata.go  ccrMetadataImpl.go  ccrMetadata_test.go
client/: collections_filter.go  collections_filter_test.go  mc.go  mc_test.go  tap_feed_test.go  transport.go  upr_event.go  upr_feed.go  upr_feed_test.go
common/: component.go  connectable.go  connector.go  nozzle.go  part.go  pipeline.go  pipeline_factory.go  pipeline_runtime_context.go  pipeline_service.go  supervisor.go
component/: abstract_component.go  advAbstractComponent.go  async_listener.go  common.go  targetConnComponent.go  targetConnComponent_test.go
conflictlog/: bucket.go  conn.go  const.go  errors.go  gocbcore.go  gomemcached.go  gomemcached_tmpfail_test.go  logger.go  loggerimpl.go  loggerimpl_test.go  manager.go  manifest.go  mapper.go  mapperImpl.go  mapperImpl_test.go  monitor.go  monitor_test.go  record.go  record_test.go  utils.go
connector/: cbcrc.go  router.go  simple_connector.go  vbTranslator.go
couchdoc_metadata/: couchdoc_metadata.go
crMeta/: conflictDetection.go  conflictResolution.go  crDocs.go  crHelpers.go  crMetadata.go  crMetadata_test.go
debug/: mcdebug.go  mcdebug_test.go
docs/: sherlock_xdcr_lww_design.md  xdcr_sherlock_design.md
etc/: audit_descriptor.json  metrics_metadata.json
factory/: capi_utils.go  cng.go  factoryDevInjector.go  xdcr_factory.go  xdcr_factory_dev_injector.go  xdcr_factory_prod_injector.go  xdcr_factory_test.go
functions/: javascript_function.go  javascript_function_ce.go
gen_server/: gen_server.go  gen_server_test.go
gocache/: gocache.go  mc_storage.go
hlv/: hlv.go  hlvImpl.go  hlv_test.go
interface_test/: interface_test.go  test_error_handler.go  test_incoming_nozzle.go  test_metrics_counter.go  test_outgoing_nozzle.go  test_part.go  test_pipeline_factory.go
log/: log_writer.go  logger.go
main/: coverage.go  main.go  platform.go  platform_windows.go
metadata/: backfill_replication.go  backfill_replication_test.go  backfill_request.go  bucketVBMGlobalPayload.json  bucket_settings.go  capability.go  capability_test.go  checkpoint.go  checkpoint_test.go  collections.go  collections_test.go  common.go  dcpStreamReqs.go  genericSpecification.go  global_settings.go  global_settings_test.go  heartbeatMetadata.go  heartbeatMetadata_test.go  internal_settings.go  remote_cluster_ref.go  remote_cluster_ref_test.go  replicationSettings_test.go  replication_settings.go  replication_settings_dev.go  replication_settings_prod.go  replication_spec.go  (+2 more)
(+1222 files in other folders)
